{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "bd22fcb8-08d0-4199-aaad-5629707e7997",
            "actions": [
                {
                    "name": "KeyboardWalk",
                    "type": "Value",
                    "id": "805fa781-bf6f-4dd4-b124-271852990d88",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseWalk",
                    "type": "Button",
                    "id": "e73c7782-ec70-4f3e-8757-429357afdc60",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "17b126a3-139b-4501-8ca9-b1a82095ed40",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e6b01a80-c7fb-42b4-9c42-0dee002e136c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "018280f1-6f3e-430c-a4c4-3dbc663f5494",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeWeapon",
                    "type": "Button",
                    "id": "79ba6525-1305-4571-bc81-e3830a0862e9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "65b61548-e6c9-4561-a8cd-18b271161c0e",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "e9af3213-ee41-48a4-b039-68e08627944a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardWalk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2c8ca8a8-7c73-470e-b592-535c2470b9cf",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardWalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "957f8d29-8dd5-461b-a911-8d26ff499569",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardWalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3d3bbd2c-ef9b-468d-9d7d-5c8aaed3cda9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardWalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "dd69d06e-e597-4009-b564-078d4a525cb3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardWalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f5a1c572-79e2-4b1c-92a7-3a2db22147b9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseWalk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6952da36-a0a4-43b9-9557-4f60e4a359e7",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22f8538e-b306-4eed-a06c-7f23f1c7648c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6921b948-80de-4d63-b540-76a855c3a36b",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}